add get users list endpoint
