# routes/api.php
@@ -1,5 +1,6 @@
 <?php
 
+use App\Http\Controllers\UserController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 use App\Http\Controllers\TaskController;
@@ -13,6 +14,9 @@ Route::get('/me', [CurrentUserController::class, 'show'])
     ->name('user.show');
 
 Route::get('/tasks', [TaskController::class, 'index'])
+    ->middleware(['auth:sanctum']);
+
+Route::get('/users', [UserController::class, 'index'])
     ->middleware(['auth:sanctum']);
 
 Route::get('/user', function (Request $request) {
